log
Fri 12 Aug 2022 12:48:53 PM UTC: 
 tests:  0|7
total_score: 0/70
7633c33
Fri 12 Aug 2022 12:52:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a0a512d
Fri 12 Aug 2022 12:54:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
692e307
Fri 12 Aug 2022 12:54:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cc09ae8
Fri 12 Aug 2022 01:04:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:3: error: statement with no effect [-Werror=unused-value]
   40 |   *suma sumaN(a[],m);
      |   ^~~~~
exercises.c:40:8: error: expected ‘;’ before ‘sumaN’
   40 |   *suma sumaN(a[],m);
      |        ^~~~~~
      |        ;
cc1: all warnings being treated as errors
Compilation failed
00bf335
Fri 12 Aug 2022 01:09:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘]’ token
   40 |   * suma = sumaN(a[],m);
      |                    ^
Compilation failed
f1ef511
Fri 12 Aug 2022 01:09:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3b3029a
Fri 12 Aug 2022 01:10:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:3: error: ‘buscar’ undeclared (first use in this function)
   40 |   buscar = m - 1;
      |   ^~~~~~
exercises.c:40:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1e23e07
Fri 12 Aug 2022 01:10:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4b0c4d6
Fri 12 Aug 2022 01:21:35 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:3: error: ‘buscar’ undeclared (first use in this function)
   41 |   buscar = *(a+x);
      |   ^~~~~~
exercises.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
de2196b
Fri 12 Aug 2022 01:21:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5b04c30
Fri 12 Aug 2022 01:29:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:42:20: error: passing argument 2 of ‘sumaN’ makes integer from pointer without a cast [-Werror=int-conversion]
   42 |   * suma = sumaN(a,buscar);
      |                    ^~~~~~
      |                    |
      |                    int *
exercises.c:21:24: note: expected ‘int’ but argument is of type ‘int *’
   21 | int sumaN(int a[], int N) {
      |                    ~~~~^
cc1: all warnings being treated as errors
Compilation failed
0598176
Fri 12 Aug 2022 01:30:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e8a03d0
Sun 14 Aug 2022 03:33:01 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:3: error: ‘p’ undeclared (first use in this function)
   60 |   p = (Persona*)malloc(sizeof(Persona)*1);
      |   ^
exercises.c:60:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:61:3: error: ‘pers’ undeclared (first use in this function)
   61 |   pers[0].nombre =  nombre;
      |   ^~~~
Compilation failed
ced3e70
Sun 14 Aug 2022 03:33:35 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:60:3: error: ‘p’ undeclared (first use in this function)
   60 |   p = (Persona*)malloc(sizeof(Persona)*1);
      |   ^
exercises.c:60:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
90ff462
Sun 14 Aug 2022 03:34:07 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:15: error: assignment to expression with array type
   62 |   p[0].nombre =  nombre;
      |               ^
exercises.c:63:12: error: assignment to expression with array type
   63 |   p[0].rut =  rut;
      |            ^
Compilation failed
c54bf9a
Sun 14 Aug 2022 03:50:33 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:15: error: assignment to expression with array type
   62 |   p[0].nombre =  nombre;
      |               ^
exercises.c:63:12: error: assignment to expression with array type
   63 |   p[0].rut =  rut;
      |            ^
exercises.c: In function ‘sumaV’:
exercises.c:110:3: error: invalid type argument of unary ‘*’ (have ‘Vector’)
  110 |   *c[i] = *a[i]+ *b[i];
      |   ^~~~~
exercises.c:110:11: error: invalid type argument of unary ‘*’ (have ‘Vector’)
  110 |   *c[i] = *a[i]+ *b[i];
      |           ^~~~~
exercises.c:110:18: error: invalid type argument of unary ‘*’ (have ‘Vector’)
  110 |   *c[i] = *a[i]+ *b[i];
      |                  ^~~~~
Compilation failed
3124cef
Sun 14 Aug 2022 03:54:11 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:110:3: error: invalid type argument of unary ‘*’ (have ‘Vector’)
  110 |   *c[i] = *a[i]+ *b[i];
      |   ^~~~~
exercises.c:110:11: error: invalid type argument of unary ‘*’ (have ‘Vector’)
  110 |   *c[i] = *a[i]+ *b[i];
      |           ^~~~~
exercises.c:110:18: error: invalid type argument of unary ‘*’ (have ‘Vector’)
  110 |   *c[i] = *a[i]+ *b[i];
      |                  ^~~~~
exercises.c: In function ‘crearPersona’:
exercises.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d1ffd6c
Sun 14 Aug 2022 03:54:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:110:14: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  110 |   c[i] = a[i]+ b[i];
      |          ~~~~^ ~~~~
      |           |     |
      |           |     Vector
      |           Vector
exercises.c: In function ‘crearPersona’:
exercises.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b6df5ed
Sun 14 Aug 2022 05:30:17 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:110:16: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  110 |     c[i] = a[i]+ b[i];
      |            ~~~~^ ~~~~
      |             |     |
      |             |     Vector
      |             Vector
Compilation failed
61c67fc
Sun 14 Aug 2022 05:30:37 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
a0e0784
